--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack --port 3001",
-    "start": "next start --port 3001"
+    "start": "next start --port 3001",
+    "lint": "next lint",
+    "ngrok": "ngrok http 3001"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -12,7 +14,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "15.6.0-canary.2",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.29",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
@@ -26,7 +28,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react-dom": "19.0.3",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "15.5.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
